# Systemommy

./: .gitattributes  .gitignore  DEVELOPMENT.md  README.md  logs_1.txt  pyproject.toml  requirements.txt  run.bat
.github/agents/: my-agent.agent.md
reference/CryptoPenetratorXL_Bot/: DEVELOPMENT_PLAN.md  README.md  main.py  requirements.txt  start.bat
reference/CryptoPenetratorXL_Bot/app/: __init__.py
reference/CryptoPenetratorXL_Bot/app/analysis/: enhanced_analysis.py
reference/CryptoPenetratorXL_Bot/app/api/: __init__.py  bybit_client.py  bybit_ws.py
reference/CryptoPenetratorXL_Bot/app/core/: __init__.py  config.py  constants.py  exceptions.py  logger.py
reference/CryptoPenetratorXL_Bot/app/db/: __init__.py  database.py  models.py
reference/CryptoPenetratorXL_Bot/app/gui/: __init__.py  analytics_widget.py  chart_widget.py  main_window.py  styles.py
reference/CryptoPenetratorXL_Bot/app/indicators/: __init__.py  cci.py  engine.py  macd.py  (+2 more)
reference/CryptoPenetratorXL_Bot/notes/: задачи.txt  процесс.txt
src/systemommy/: __init__.py  __main__.py  app.py  config.py  constants.py
src/systemommy/alerts/: __init__.py  manager.py
src/systemommy/hardware/: __init__.py  cpu.py  gpu.py  history.py  info.py  monitor.py  thermal.py
src/systemommy/overlay/: __init__.py  widget.py
src/systemommy/ui/: __init__.py  main_window.py  theme.py  tray.py
tests/: test_alerts.py  test_config.py  test_constants.py  test_fallbacks.py  test_hardware.py  test_history.py  test_info.py  test_launcher_script.py  test_metrics_graph.py  test_overlay.py  test_thermal.py
(+8 files in other folders)
