[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "systemommy"
version = "1.3.0"
description = "Hardware temperature monitor with overlay for Windows 11"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.7,<7",
    "psutil>=6.0,<8",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-qt==4.4.0",
]

[project.scripts]
systemommy = "systemommy.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
